<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/fast_layout_title_bar"/>

        <com.allen.library.SuperTextView
            android:id="@+id/stv_infoMine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_margin_item"
            android:background="@color/colorWhite"
            android:minHeight="140dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            app:sDividerLineColor="@color/colorLineGray"
            app:sDividerLineType="none"
            app:sLeftBottomMaxEms="2000"
            app:sLeftBottomTextColor="@color/colorTextBlackLight"
            app:sLeftBottomTextSize="14dp"
            app:sLeftBottomTextString="简书:"
            app:sLeftIconHeight="75dp"
            app:sLeftIconMarginLeft="16dp"
            app:sLeftViewMarginLeft="16dp"
            app:sLeftIconRes="@drawable/fast_shape_placeholder_circle"
            app:sLeftIconWidth="75dp"
            app:sLeftMaxEms="2000"
            app:sLeftTextColor="@color/colorTextBlackLight"
            app:sLeftTextSize="14dp"
            app:sLeftTextString="GitHub:"
            app:sLeftTopTextColor="@color/colorTextBlack"
            app:sLeftTopTextSize="20dp"
            app:sLeftTopTextString="AriesHoo"
            app:sLeftViewGravity="left_center"
            app:sShapeCornersRadius="@dimen/dp_radius"
            app:sUseShape="true">

        </com.allen.library.SuperTextView>

        <com.allen.library.SuperTextView
            android:id="@+id/stv_setting"
            style="@style/SupperTextStyleItem"
            app:sLeftTextString="@string/setting"/>

        <com.allen.library.SuperTextView
            android:id="@+id/stv_libraryMine"
            style="@style/SupperTextStyleItem"
            app:sDividerLineType="none"
            app:sLeftTextString="@string/library_address"/>

        <com.allen.library.SuperTextView
            android:id="@+id/stv_thirdLib"
            style="@style/SupperTextStyleItem"
            app:sLeftTextString="@string/third_part"/>
    </LinearLayout>
</ScrollView>
